syntax = "proto3";

// Определяем пакет для proto-файла
package users;

// Опции для генерации Go кода
option go_package = "./users";
// Сервис управления пользователями
service UserService {
  // Регистрация студента
  rpc RegisterStudent(RegisterStudentRequest) returns (RegisterResponse);

  // Регистрация преподавателя
  rpc RegisterTeacher(RegisterTeacherRequest) returns (RegisterResponse);

  // Вход в систему
  rpc Login(LoginRequest) returns (LoginResponse);

  // Получение профиля текущего пользователя
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
}

// Роли пользователей
enum UserRole {
  ROLE_UNSPECIFIED = 0;
  ROLE_STUDENT = 1;
  ROLE_TEACHER = 2;
  ROLE_ADMIN = 3;
}

// Запрос на регистрацию студента
message RegisterStudentRequest {
  string email = 1;
  string password = 2;
  string group_name = 3;
  string faculty = 4;
  int32 course = 5;
  string student_number = 6;
}

// Запрос на регистрацию преподавателя
message RegisterTeacherRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
  string department = 4;
  string position = 5;
  string teacher_id = 6;
}

// Ответ на регистрацию
message RegisterResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
  oneof profile {
    StudentProfile student_profile = 4;
    TeacherProfile teacher_profile = 5;
  }
}

// Запрос на вход
message LoginRequest {
  string email = 1;
  string password = 2;
}

// Ответ на вход
message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  User user = 4;
}

// Запрос на получение профиля
message GetProfileRequest { string token = 1; }

// Ответ на получение профиля
message GetProfileResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
  oneof profile {
    StudentProfile student_profile = 4;
    TeacherProfile teacher_profile = 5;
  }
}

// Информация о пользователе
message User {
  string id = 1;
  string email = 2;
  UserRole role = 3;
  string created_at = 4;
  bool is_active = 5;
}

// Профиль студента
message StudentProfile {
  string user_id = 1;
  string group_name = 2;
  string faculty = 3;
  int32 course = 4;
  string student_number = 5;
}

// Профиль преподавателя
message TeacherProfile {
  string user_id = 1;
  string full_name = 2;
  string department = 3;
  string position = 4;
  string teacher_id = 5;
}
